# it-solutions-parsing-api

./: .docker.env  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  settings.py
api/v1/: __init__.py  ad.py
database/: setup_db.sh
database/controllers/: ad.py
database/models/: __init__.py  ad.py  base.py
migrations/versions/: 63b9c4445c02_init_database.py
schemas/v1/: ad.py  errors.py
utils/: auth.py  lifespan.py  parse.py  requests.py
